--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,6 +33,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.3.2"
+    "@testing-library/react": "^9.3.2",
+    "cypress": "^3.7.0"
   }
 }
